Change CSS of prop header for better scanning. Add padding in classes and individuals tabs to right most block to align with center block. Fix flexing of prop header title. Disable aimation on prop values so there is no delay.

--- a/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/propertyValues/propertyValues.scss
+++ b/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/propertyValues/propertyValues.scss
@@ -7,6 +7,7 @@
 
         .text {
             max-width: 75%;
+            font-weight: 600;
         }
     }
     .prop-value-container {
